# How-Much-Does-AI-Know-You

./: .env  .env.example  API.md  CHANGELOG.md  CONTRIBUTING.md  IMPLEMENTATION_COMPLETE.md  LICENSE  README.md  demo.py  demo_complete.py  pyproject.toml  setup.sh  test_phase2_phase3.py
src/ai_audit/: __init__.py  analyzer.py  cli.py  config.py  models.py
src/ai_audit/automation/: __init__.py
src/ai_audit/browser_extension/: __init__.py
src/ai_audit/browser_extension/browser_extension/: content.js  manifest.json  popup.html
src/ai_audit/connectors/: __init__.py  github.py  linkedin.py  reddit.py  twitter.py
src/ai_audit/inference/: __init__.py
src/ai_audit/monitoring/: __init__.py
src/ai_audit/plugins/: __init__.py
src/ai_audit/storage/: __init__.py
src/ai_audit/web/: __init__.py  server.py
src/how_much_does_ai_know_you.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_ai_audit.py
~/.ai-audit/: audit_data.db
